Preventing selection on IE Fixing cursor on radio

--- a/css/radios.css
+++ b/css/radios.css
@@ -13,6 +13,7 @@ input[type='radio'], input[type='checkbox'] {
 	opacity: 0;
 	float: left;
 	width: 18px;
+	cursor: pointer;
 }
 
 input[type='radio'] + label, [type='checkbox'] + label {
